solc_ossfuzz_seed_corpus/test_sol/test_3e6f098fe5fdbc9e17115d0ff4afb2c200ff52fcc40091d29aea7573886d9fcd_ad0cc1601b34bbe19ac07f57500b5f9972a938f0_sol.sol
==== Source:  ====

==== Source: su0.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;

==== Source: su1.sol ====
pragma abicoder v2;
pragma solidity >= 0.0.0;
function f0(int88 i0,address i1)  returns(int128 o0)
{

  {


  }


  {


{



  o0 ^= ((-37846152579421252245537181943641639632 / 92389784093378310491403014043639731086) + (-31014159942058957495107230588483522542 ^ -123265770088963082657341639865642699664));
  {
  }
}
  }
}
function f1(uint72 i0,bytes27 i1)  returns(function () external o0,address o1,bool o2)
{ }
// ----
// TypeError 7366: (su1.sol:135-312): Operator ^= not compatible with types int128 and rational_const 4661...(68 digits omitted)...6406 / 4619...(30 digits omitted)...5543
